# IconForge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py  setup.md  svg_settings.json
backend/: main.py
backend/api/: app.py  dependencies.py
backend/api/routes/: background.py  color_svg.py  crop.py  export.py  images.py  potrace_color.py  settings.py  svg.py  upload.py
backend/background_remover/: processor.py
backend/color_svg_converter/: processor.py  settings.py
backend/core/: image_utils.py  utils.py
backend/potrace_color_converter/: potrace_runner.py  preprocess.py  processor.py  settings.py  svg_composer.py
backend/svg_converter/: processor.py  settings.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: WizardLayout.tsx
frontend/src/components/shared/: DropZone.tsx  ImageCropper.tsx  ImagePreview.tsx  SettingsPanel.tsx  StepIndicator.tsx
frontend/src/components/steps/: BackgroundRemovalStep.tsx  CompareStep.tsx  ExportStep.tsx  OptionsStep.tsx  OutputTypeStep.tsx  ProcessingStep.tsx  UploadStep.tsx
frontend/src/hooks/: useApi.ts  useWizard.ts
frontend/src/lib/: colorSVGPresets.ts  potraceColorPresets.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: imageUtils.ts
src/iconforge/: main.py
src/iconforge/background_remover/: processor.py
src/iconforge/svg_converter/: processor.py  settings.py
